HTML&CSS Update

--- a/Html_Css_Js/html/1-14.html
+++ b/Html_Css_Js/html/1-14.html
@@ -11,16 +11,15 @@
     </style>
   </head>
   <body>
-    <h1>div에 대해 알아봅시다</h1>
+    <h1>div에 대해서 알아봅시다.</h1>
     <p>
-      Lorem <span>test<b>eeee</b><small>12344</small></span
-      >ipsum dolor sit amet consectetur adipisicing elit. Exercitationem optio
-      quis architecto minima totam eius mollitia natus porro atque distinctio.
-      Fugiat sit expedita officia hic accusamus, exercitationem eius pariatur
-      enim.
+      Lorem <span><b>test</b>ipsum <small>tagttt</small></span> sit amet
+      consectetur adipisicing elit. Quam, ipsa. Dolorum, voluptatibus at iure
+      commodi praesentium quaerat eveniet laboriosam necessitatibus aspernatur
+      nesciunt quidem cumque fugit ipsum quasi! Odit, asperiores commodi?
     </p>
     <div>
-      <h2>span 태그를 알아봅시다</h2>
+      <h2>span도 알아봅시다.</h2>
       <p>span1</p>
       <p>span2</p>
     </div>
