--- a/Html_Css_Js/index.html
+++ b/Html_Css_Js/index.html
@@ -1,5 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+	<meta charset="UTF-8">
+	<title>JavaScript 사용 방법</title>		
+</head>
 <body>
-	<h1>Hello world</h1>
+	<h1>JavaScript 사용 방법</h1>
+	<script src="myScript.js"></script>
 </body>
 </html>
